package Proxy;

public interface Internet {
    void connectTo(String serverhost);
}
